# UsingOfXhook

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/rzm/myxhook/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/rzm/myxhook/: Hook.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/rzm/myxhook/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
